fix(job): preserve nullable task outputs